<resources>
    <string name="app_name">My CookBook</string>
    <string name="main_screen_error">Something went wrong</string>
    <string name="no_network">No Network</string>
    <string name="refresh">Refresh</string>
    <string name="instructionsTest" translatable="false">To make the pastry, measure the flour into a bowl and rub in the butter with your fingertips until the mixture resembles fine breadcrumbs. Add the water, mixing to form a soft dough. Roll out the dough on a lightly floured work surface and use to line a 20cm/8in flan tin. Leave in the fridge to chill for 30 minutes. Preheat the oven to 200C/400F/Gas 6 (180C fan). Line the pastry case with foil and fill with baking beans. Bake blind for about 15 minutes, then remove the beans and foil and cook for a further five minutes to dry out the base. For the filing, spread the base of the flan generously with raspberry jam. Melt the butter in a pan, take off the heat and then stir in the sugar. Add ground almonds, egg and almond extract. Pour into the flan tin and sprinkle over the flaked almonds. Bake for about 35 minutes. If the almonds seem to be browning too quickly, cover the tart loosely with foil to prevent them burning.</string>
    <string name="penne_rigate_olive_oil_garlic_chopped_tomatoes_red_chile_flakes_italian_seasoningbasil_basil_parmigiano_reggiano" translatable="false"> \n - penne rigate\n - olive oil\n - garlic\n  - chopped tomatoes\n  - red chile flakes\n  - italian seasoningbasil\n - basil\n - Parmigiano-Reggiano \n</string>
    <string name="category_label">Category:</string>
    <string name="area_label">Area:</string>
    <string name="defaultQuantity">q.s.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="flag">flag</string>
    <string name="no_recipe_found_text">No Recipe Found :(</string>
    <string name="random_recipe_text_btn">Search for a Random Recipe!</string>
    <string name="remove">remove</string>
    <string name="favourite_recipe_image">Favourite Recipe Image</string>
    <string name="ic_favourite_border">Ic Favourite border</string>
    <string name="favourite_list">Favourite List</string>
    <string name="feedback">Feedback</string>
    <string name="random">Random</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="shopping_list">Shopping List</string>
    <string name="there_are_no_favorite_recipes_yet">There are no favorite recipes yet</string>
    <string name="search">Search</string>
    <string name="there_are_no_recipes_yet">there are no recipes yet</string>
    <string name="search_fragment_message">Try to search some recipe or ingredient</string>
    <string name="hint_search">Cake</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="nazione">Nation</string>
    <string name="categoria">Category</string>
    <string name="ingrediente">Ingredient</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredient">Ingredient</string>
    <string name="name_and_ingredient">Name and Ingredient</string>
    <string name="filter_not_selected_msg">Select a filter</string>
    <string name="favourites_fragment_title">Favourites</string>
    <string name="home_fragment_title">Home</string>
    <string name="recipe_detail_fragment_title">Recipe Detail</string>
    <string name="search_fragment_title">Search Screen</string>
</resources>
